# rsh

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  mise.toml
.github/workflows/: ci.yml  release.yml
.seed/: config.kdl
git_hooks/: pre-commit
src/: allowlist.rs  ast.rs  executor.rs  glob.rs  install.rs  main.rs  mcp.rs  parser.rs  sed.rs  validator.rs
tests/: executor_tests.rs  integration_tests.rs  mcp_tests.rs  parser_tests.rs
