[package]
name = "rsh"
version = "0.1.0"
edition = "2021"
description = "Restricted shell for AI agents — safe, auditable command execution"

[dependencies]
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
os_pipe = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[[test]]
name = "parser_tests"
path = "tests/parser_tests.rs"

[[test]]
name = "executor_tests"
path = "tests/executor_tests.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
