[package]
name = "rsh"
version = "0.0.6"
edition = "2024"
description = "Restricted shell for AI agents — safe, auditable command execution"

[dependencies]
glob = "0.3"
os_pipe = "1"
brush-parser = "=0.3.0"
libc = "0.2"
serde_json = "1"

[dev-dependencies]
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[test]]
name = "parser_tests"
path = "tests/parser_tests.rs"

[[test]]
name = "executor_tests"
path = "tests/executor_tests.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
